Add shadowban expiry
